--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "express": "4.16.2",
-        "aws-serverless-express": "3.1.3"
+        "airtable": "0.5.6",
+        "aws-serverless-express": "3.1.3",
+        "express": "4.16.2"
     },
     "devDependencies": {
         "mocha": "5.0.0",
