--- a/template.yml
+++ b/template.yml
@@ -34,7 +34,7 @@ Resources:
         GetEvent:
           Type: Api
           Properties:
-            Path: /{proxy+}
+            Path: /
             Method: get
         GetEventEpisode:
           Type: Api
